--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,625 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: 'Neue Kaine SemBd';
+    src: url('assets/fonts/NeueKaine-SemiBold.eot');
+    src: url('assets/fonts/NeueKaine-SemiBold.eot?#iefix') format('embedded-opentype'), url('assets/fonts/NeueKaine-SemiBold.woff2') format('woff2'), url('assets/fonts/NeueKaine-SemiBold.woff') format('woff'), url('assets/fonts/NeueKaine-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&display=swap');
+$font-family-sans-serif:'Agdasima',
+sans-serif;
+$primary: #f05a28;
+
+/* Importing Bootstrap SCSS file. */
+
+@import 'bootstrap/scss/bootstrap';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+.main-title {
+    font-family: 'Neue Kaine SemBd';
+    font-size: 2.8rem;
+    margin-bottom: 30px;
+    color: $primary;
+    @include media-breakpoint-down(md) {
+        font-size: 2.4rem;
+    }
+}
+
+
+/* ==========================================================================
+Navigation
+========================================================================== */
+
+.header-nav.open {
+    visibility: visible;
+    opacity: 0.9;
+    -webkit-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+}
+
+.nav-toggle {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    z-index: 999999;
+    padding: 6px 35px 16px 0;
+    cursor: pointer;
+}
+
+.nav-toggle:focus {
+    outline: none;
+}
+
+.nav-toggle span,
+.nav-toggle span:before,
+.nav-toggle span:after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 35px;
+    height: 3px;
+    border-radius: 1px;
+    background: #fff;
+    cursor: pointer;
+}
+
+.nav-toggle span:before {
+    top: -10px;
+}
+
+.nav-toggle span:after {
+    bottom: -10px;
+}
+
+.nav-toggle span,
+.nav-toggle span:before,
+.nav-toggle span:after {
+    -webkit-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+}
+
+.nav-toggle.active span {
+    background-color: transparent;
+}
+
+.nav-toggle.active span:before,
+.nav-toggle.active span:after {
+    background: #fff;
+    top: 0;
+}
+
+.nav-toggle.active span:before {
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.nav-toggle.active span:after {
+    top: 10px;
+    -ms-transform: translatey(-10px) rotate(-45deg);
+    -webkit-transform: translatey(-10px) rotate(-45deg);
+    transform: translatey(-10px) rotate(-45deg);
+}
+
+.navicon {
+    position: absolute;
+    height: 26px;
+    right: 5px;
+    top: 32px;
+    visibility: hidden;
+    transition: all 300ms ease-in-out;
+    @include media-breakpoint-down(md) {
+        top: 40px;
+    }
+}
+
+.navigation {
+    transition: all 300ms ease-in-out;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    background-color: transparent;
+}
+
+header {
+    padding: 50px 0;
+    position: relative;
+    z-index: 1000;
+    width: 100%;
+    margin: 0 auto;
+    transition: padding 300ms ease-in-out;
+    @include media-breakpoint-down(md) {
+        padding: 15px 0;
+    }
+    .show-search {
+        font-size: 0.9rem;
+        color: $black;
+        &:hover {
+            color: $primary;
+            text-decoration: none;
+        }
+    }
+    .logo {
+        img {
+            max-width: 220px;
+            width: 100%;
+            @include media-breakpoint-down(md) {
+                max-width: 160px;
+            }
+        }
+    }
+    .logo-audi {
+        img {
+            width: 180px;
+            @include media-breakpoint-down(md) {
+                width: 120px;
+            }
+        }
+    }
+    .header-nav {
+        ul.primary-nav {
+            padding: 0;
+            margin: 0;
+            li {
+                display: inline-block;
+                @include media-breakpoint-down(md) {
+                    display: block;
+                }
+                a {
+                    color: $white;
+                    padding: 4px 20px;
+                    font-weight: 300;
+                    font-size: 0.9rem;
+                    letter-spacing: 0.2em;
+                    text-decoration: none;
+                    &:hover {
+                        opacity: 0.7;
+                    }
+                }
+                &:last-child a {
+                    padding: 0;
+                }
+            }
+        }
+        @include media-breakpoint-down(md) {
+            nav {
+                padding: 0 30px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1200px) {
+    header {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width:991px) {
+    header {
+        width: 100%;
+    }
+    .header-nav {
+        position: fixed;
+        background-color: $secondary;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 99999;
+        visibility: hidden;
+        opacity: 0;
+        -webkit-transition: opacity 0.5s, visibility 0s 0.5s;
+        transition: opacity 0.5s, visibility 0s 0.5s;
+    }
+    .navicon {
+        visibility: visible;
+    }
+    header .nav-wrapper {
+        display: absolute;
+    }
+    header nav {
+        position: relative;
+        top: 45%;
+        -moz-transform: translatey(-45%);
+        -ms-transform: translatey(-45%);
+        -o-transform: translatey(-45%);
+        -webkit-transform: translatey(-45%);
+        transform: translatey(-45%);
+    }
+    nav ul.primary-nav {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    nav ul.primary-nav li a {
+        font-size: 1.2rem !important;
+        line-height: 2.5;
+    }
+    nav ul.primary-nav li {
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+        filter: alpha(opacity=0);
+        opacity: 0;
+        -moz-transform: translate3d(0, -80px, 0);
+        -ms-transform: translate3d(0, -80px, 0);
+        -o-transform: translate3d(0, -80px, 0);
+        -webkit-transform: translate3d(0, -80px, 0);
+        transform: translate3d(0, -80px, 0);
+        -moz-transition: -moz-transform 0.5s, opacity 0.5s;
+        -o-transition: -o-transform 0.5s, opacity 0.5s;
+        -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+        transition: transform 0.5s, opacity 0.5s;
+        -moz-transition: -moz-transform 0.5s, opacity 0.5s;
+        -o-transition: -o-transform 0.5s, opacity 0.5s;
+        -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+        transition: transform 0.5s, opacity 0.5s
+    }
+    header .header-nav.open ul.primary-nav li {
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+        filter: alpha(opacity=100);
+        opacity: 1;
+        -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+        -o-transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+.fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    left: 0;
+    z-index: 1002;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    visibility: visible !important;
+    -webkit-animation-name: slideInDown;
+    animation-name: slideInDown;
+    background-color: rgba($color: $black, $alpha: 0.8);
+    header {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navicon {
+        top: 25px;
+    }
+    .logo {
+        img {
+            max-width: 120px;
+            @include media-breakpoint-down(md) {
+                max-width: 100px;
+            }
+        }
+    }
+    .logo-audi {
+        img {
+            width: 100px;
+        }
+    }
+}
+
+@-webkit-keyframes slideInDown {
+    0% {
+        -webkit-transform: translateY(-100%);
+        transform: translateY(-100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInDown {
+    0% {
+        -webkit-transform: translateY(-100%);
+        transform: translateY(-100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.slideInDown {
+    -webkit-animation-name: slideInDown;
+    animation-name: slideInDown;
+}
+
+@-webkit-keyframes slideInUp {
+    0% {
+        -webkit-transform: translateY(100%);
+        transform: translateY(100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInUp {
+    0% {
+        -webkit-transform: translateY(100%);
+        transform: translateY(100%);
+        visibility: visible;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.slideInUp {
+    -webkit-animation-name: slideInUp;
+    animation-name: slideInUp;
+}
+
+.icons {
+    a {
+        color: $primary;
+        transition: opacity 0.2s ease;
+        &:hover {
+            text-decoration: none;
+            opacity: 0.7;
+        }
+        i {
+            font-size: 1.4rem;
+        }
+    }
+}
+
+
+/* ==========================================================================
+Boton whatsapp flotante
+========================================================================== */
+
+.button-whatsapp {
+    position: fixed;
+    z-index: 2000;
+    bottom: 20px;
+    right: 10px;
+    cursor: pointer;
+    overflow: hidden;
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    transition: all 500ms ease;
+    text-decoration: none;
+    color: #fff;
+    text-align: center;
+    @include media-breakpoint-down(md) {
+        font-size: 0.8em;
+        bottom: 20px;
+        right: 10px;
+    }
+    i {
+        vertical-align: middle;
+        padding: 10px 10px;
+        background-color: #25d366;
+        border-radius: 10px;
+        font-size: 2rem;
+        line-height: 1;
+        display: inline-block;
+    }
+    p {
+        padding: 5px 10px;
+        background-color: #000;
+        border-radius: 10px;
+        display: inline-block;
+        margin-left: 10px;
+        position: relative;
+        z-index: -1;
+        font-weight: 200;
+        @include media-breakpoint-down(md) {
+            display: none;
+        }
+    }
+    &:hover,
+    &:focus {
+        -webkit-transform: scale3d(1.1, 1.1, 1);
+        transform: scale3d(1.1, 1.1, 1);
+        text-decoration: none;
+        color: #fff;
+    }
+}
+
+.boton-subir {
+    display: none;
+    background: $primary;
+    border-radius: 3px;
+    position: fixed;
+    right: 15px;
+    bottom: 150px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    z-index: 100;
+    i {
+        color: #fff;
+    }
+    &.mostrar {
+        display: block;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
+        visibility: visible !important;
+        -webkit-animation-name: slideInUp;
+        animation-name: slideInUp;
+    }
+}
+
+.homeCarousel {
+    height: auto;
+    overflow: hidden;
+    max-height: 900px;
+    .carousel-item {
+        height: auto;
+        width: 100%;
+        background-position: center;
+        background-size: cover;
+        picture {
+            position: relative;
+            height: 100%;
+            display: block;
+            &::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                z-index: 1;
+                background: #000;
+                opacity: .2;
+            }
+        }
+        .carousel-caption {
+            bottom: 15%;
+            color: $white;
+            z-index: 1;
+            text-align: left;
+            h3 {
+                font-size: 5.4rem;
+                line-height: 1;
+                @include media-breakpoint-down(md) {
+                    font-size: 2.4rem;
+                }
+            }
+            @include media-breakpoint-down(md) {
+                width: 70%;
+            }
+        }
+    }
+}
+
+.marcas {
+    .owl-stage {
+        display: flex;
+        align-items: center;
+        .owl-item img {
+            width: auto !important;
+            max-height: 80px;
+        }
+    }
+}
+
+#servicios {
+    background-color: #ececec;
+    h3 {
+        font-size: 2rem;
+        font-family: 'Neue Kaine SemBd';
+        margin-top: 40px;
+        @include media-breakpoint-down(md) {
+            margin-top: 20px;
+            font-size: 1.2rem;
+        }
+    }
+    a {
+        img {
+            -webkit-transition: all 500ms ease;
+            -moz-transition: all 500ms ease;
+            transition: all 500ms ease;
+            height: 115px;
+            width: auto;
+            @include media-breakpoint-down(md) {
+                height: 90px;
+            }
+        }
+        text-decoration: none;
+        color: black;
+        &:hover img,
+        &:focus img {
+            -webkit-transform: scale3d(1.1, 1.1, 1);
+            transform: scale3d(1.1, 1.1, 1);
+        }
+    }
+}
+
+#quienes-somos {
+    p {
+        font-size: 2.8rem;
+        line-height: 1.2;
+        @include media-breakpoint-down(md) {
+            font-size: 1.4rem;
+        }
+        strong {
+            font-weight: 700;
+        }
+    }
+}
+
+#contacto {
+    background-color: #ececec;
+    label {
+        font-size: 1.2rem;
+        line-height: 1;
+        font-weight: 200;
+    }
+    .info-contacto {
+        a {
+            font-size: 1.6rem;
+            color: black;
+            line-height: 1.2;
+        }
+    }
+}
+
+footer {
+    background-color: black;
+    .logo-footer {
+        max-width: 180px;
+    }
+    .footer-menu {
+        margin: 0;
+        a {
+            font-size: 1.6rem;
+            line-height: 1.2;
+            text-decoration: none;
+            color: $white;
+            &:hover {
+                color: $gray-300;
+            }
+        }
+    }
+    .info-contacto {
+        i {
+            color: $white;
+            font-size: 1.4rem;
+        }
+        a {
+            font-size: 1.2rem;
+        }
+    }
+    .nosotros {
+        .footer-title {
+            font-family: 'Neue Kaine SemBd';
+            font-size: 1.6rem;
+            margin-bottom: 20px;
+            color: $primary;
+            @include media-breakpoint-down(md) {
+                font-size: 1.2rem;
+            }
+        }
+        p {
+            font-size: 1.4rem;
+            line-height: 1.2;
+            margin-bottom: 0;
+            color: white;
+        }
+    }
+    h5 {
+        color: $gray-500;
+        font-size: 1rem;
+        margin: 0;
+    }
+}
